--- a/dossier sans titre/index.html
+++ b/dossier sans titre/index.html
@@ -247,7 +247,10 @@
           <p>
             Tu es la personne qui illumine mes journées. Je t'aime, et je suis
             prêt à tout pour me faire pardonner même si je sais déjà que tu est
-            deja aller chercher ailleur
+            deja aller chercher ailleur  
+            Je comprends ce que tu ressens et je m’excuse. Tu as raison, mes actes n’ont pas suivi mes paroles et ça t’a blessée. 
+            Je tiens à toi et je veux vraiment qu’on avance ensemble, pas juste en paroles. 
+            tu facilite pas la tache avec tes comportement aussi 
           </p>
 
           <p class="signature">
